log/build_2023-11-30_18-43-37/mypkg/stdout_stderr.log
running egg_info
writing ../../build/mypkg/mypkg.egg-info/PKG-INFO
writing dependency_links to ../../build/mypkg/mypkg.egg-info/dependency_links.txt
writing entry points to ../../build/mypkg/mypkg.egg-info/entry_points.txt
writing requirements to ../../build/mypkg/mypkg.egg-info/requires.txt
writing top-level names to ../../build/mypkg/mypkg.egg-info/top_level.txt
reading manifest file '../../build/mypkg/mypkg.egg-info/SOURCES.txt'
writing manifest file '../../build/mypkg/mypkg.egg-info/SOURCES.txt'
running build
running build_py
running install
running install_lib
byte-compiling /home/zhang/ros2_ws/install/mypkg/lib/python3.8/site-packages/mypkg/listener.py to listener.cpython-38.pyc
running install_data
  File "/home/zhang/ros2_ws/install/mypkg/lib/python3.8/site-packages/mypkg/listener.py", line 11
    pub = node.create_subscription(Int16. "countup", cb, 10)
                                          ^
SyntaxError: invalid syntax

running install_egg_info
removing '/home/zhang/ros2_ws/install/mypkg/lib/python3.8/site-packages/mypkg-0.0.0-py3.8.egg-info' (and everything under it)
Copying ../../build/mypkg/mypkg.egg-info to /home/zhang/ros2_ws/install/mypkg/lib/python3.8/site-packages/mypkg-0.0.0-py3.8.egg-info
running install_scripts
Installing listener script to /home/zhang/ros2_ws/install/mypkg/lib/mypkg
Installing talker script to /home/zhang/ros2_ws/install/mypkg/lib/mypkg
writing list of installed files to '/home/zhang/ros2_ws/build/mypkg/install.log'
